--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ foo.py
 01_Data/03_Street_images
 config.py
 chunk*.pkl
+imagery/streetview/api.pkl
+01_Data/03_Processed_data/OZONE/gsv_train_images.h5
+imagery/api.pkl
+01_Data/03_Processed_data/OZONE/gsv_train_images_size_test.h5
