--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ imagery/streetview/api.pkl
 01_Data/03_Processed_data/OZONE/gsv_train_images.h5
 imagery/api.pkl
 01_Data/03_Processed_data/OZONE/gsv_train_images_size_test.h5
+03_Trained_Models
